# upload_file_fastapi_actix

./: README.md
handling_data/: Cargo.toml
handling_data/src/: main.rs
upload_fastapi/: main.py  pyproject.toml
