[tool.poetry]
name = "upload-file-fastapi-actix"
version = "0.1.0"
description = ""
authors = ["renaldyhidayatt <renaldyhidayatt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
requests = "^2.32.3"
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
